modify the 2D cylinder flow with Re100 based on Ou et. al.

--- a/cylinder_flow_2d/Re100/cylinder_flow_2d.ini
+++ b/cylinder_flow_2d/Re100/cylinder_flow_2d.ini
@@ -13,33 +13,24 @@ mpi-type = standard
 
 [constants]
 gamma = 1.4
-mu = 0.01205
+mu = 0.01
 Pr = 0.713
+rho = 1.0
 
-cp = 1005.0
-k = 0.0257
-rho = 1.205
-
-Uw = 1
-Tw = 293.15
-Pc = 1.01325e5
+Uw = 1.0
+Tw = 300.0
+Pc = 17.679638579186854
 
 [solver]
 system = navier-stokes
-order = 1
+order = 4
 
 [solver-time-integrator]
-scheme = rk45
-controller = pi
-dt = 0.0001
-atol = 0.00001
-rtol = 0.00001
-errest-norm = l2
-safety-fact = 0.9
-min-fact = 0.3
-max-fact = 2.5
+scheme = euler
+controller = none
+dt = 0.000005
 tstart = 0.0
-tend = 80
+tend = 240
 
 [solver-interfaces]
 riemann-solver = rusanov
@@ -59,44 +50,41 @@ soln-pts = williams-shunn
 nsteps = 50
 
 [soln-plugin-writer]
-dt-out = 0.05
+dt-out = 0.1
 basedir = ./solutions
 basename = cylinder_flow_2d-{n:04d}
 
 [soln-plugin-fluidforce-noslip]
-nsteps = 1000
+nsteps = 10000
 file = forces.csv
 header = true
 
 [soln-bcs-inlet]
 type = char-riem-inv
-rho = 1.205
+rho = 1.0
 u = Uw
 v = 0
 p = Pc
 
 [soln-bcs-outlet]
 type = char-riem-inv
-rho = 1.205
+rho = 1.0
 u = Uw
 v = 0
 p = Pc
 
 [soln-bcs-noslip]
-type = no-slp-isot-wall
-u = 0.0
-v = 0.0
-cpTw = cp*Tw
+type = no-slp-adia-wall
 
 [soln-bcs-topandbottom]
 type = char-riem-inv
-rho = 1.205
+rho = 1.0
 u = Uw
 v = 0
 p = Pc
 
 [soln-ics]
-rho = 1.205
+rho = 1.0
 u = Uw
 v = 0.0
 p = Pc
